--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script  type="module" src="./App.js"></script>
     
-    <div id="root">hello brother !!</div>
+    <div id="root"><h1>not rendered</h1></div>
 
 </head>
     
